fix re uncertainty

--- a/paper/submission/memo.bib
+++ b/paper/submission/memo.bib
@@ -1,5 +1,40 @@
 
 
+@book{McElreath2016,
+	annote = {LDR    01319cam  2200313 i 4500
+001    18767101
+005    20160408112408.0
+008    150902s2016    flua     b    001 0 eng  
+906    $a7$bcbc$corignew$d1$eecip$f20$gy-gencatlg
+925 0  $aacquire$b1 shelf copy$xpolicy default
+955    $brl03 2015-09-02$irl03 2015-09-02 to Dewey$wxl03 2015-09-02$axn08 2016-03-09 1 copy rec'd., to CIP ver.$frl02 2016-03-17 to CALM
+010    $a  2015032008
+020    $a9781482253443 (hbk : alk. paper)
+040    $aDLC$beng$cDLC$erda$dDLC
+042    $apcc
+050 00 $aQA279.5$b.M3975 2016
+082 00 $a519.5/42$223
+100 1  $aMcElreath, Richard,$d1973-
+245 10 $aStatistical rethinking :$ba Bayesian course with examples in R and Stan /$cRichard McElreath, Max Planck Institute for Evolutionary Anthropology, Leipzig, Germany.
+264  1 $aBoca Raton :$bCRC Press/Taylor & Francis Group,$c[2016]
+300    $axvii, 469 pages :$billustrations ;$c27 cm.
+336    $atext$2rdacontent
+337    $aunmediated$2rdamedia
+338    $avolume$2rdacarrier
+490 0  $aChapman & Hall/CRC texts in statistical science series ;$v122
+500    $a"A CRC title."
+504    $aIncludes bibliographical references and index.
+650  0 $aBayesian statistical decision theory.
+650  0 $aR (Computer program language)
+},
+	author = {McElreath, Richard},
+	date-added = {2024-01-31 19:25:58 -0600},
+	date-modified = {2024-01-31 19:25:58 -0600},
+	series = {Chapman & Hall/CRC texts in statistical science series},
+	title = {Statistical Rethinking: A Bayesian Course with Examples in R and Stan},
+	year = {2016},
+	bdsk-url-1 = {https://www.google.com/books/edition/Statistical_Rethinking/T3FQDwAAQBAJ?hl=en&gbpv=1&bsq=terrors}}
+
 @book{Cohen1988,
 	address = {Hillsdale, N.J.},
 	annote = {LDR    01114pam  2200301 a 4500
